# ESP-IDF-COURSE

./: .gitignore  README.md  picocom-tutorial.md
DHT11/: README.md  sdkconfig
DHT11_/: sdkconfig.old
Memory/embedded-files/main/: CMakeLists.txt  main.c
RESTful_API/: README.md
adc/: CMakeLists.txt  sdkconfig  sdkconfig.old
adc-calibrated/: CMakeLists.txt
adc-read/: CMakeLists.txt
component-registry/: CMakeLists.txt  README.md  sdkconfig.defaults
dac/: CMakeLists.txt  sdkconfig  sdkconfig.old
dac-cw/: CMakeLists.txt
dht11/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp-idf-st7789/: README.md  sdkconfig  sdkconfig.old
esp_timer/: CMakeLists.txt
extern-components/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
gpio-config/: CMakeLists.txt
gpio-input/: CMakeLists.txt
gpio-interrupt/: sdkconfig
gpio-output/: sdkconfig.old
gpio-output-reg/: CMakeLists.txt  sdkconfig
hello-world/: CMakeLists.txt  Readme.md  sdkconfig  sdkconfig.old
i2c-mpu6050/: CMakeLists.txt
i2c-scan/: CMakeLists.txt
ledc-pwm/: sdkconfig  sdkconfig.defaults
ledc-pwm-fade/: CMakeLists.txt
logging/: CMakeLists.txt  README.md  sdkconfig
mqtt/: CMakeLists.txt  sdkconfig  sdkconfig.old
relay-component/: CMakeLists.txt  README.md
rtc-example/: CMakeLists.txt  README.md  sdkconfig
scripts-gravacao/: flash_log.txt  grava-openocd.py  gravar-esp-prog-linux.sh  gravar-esp-prog.bat  gravar-esptool-linux.sh  gravar-esptool-win.bat  gravar-esptool.py
temp-sensor/: CMakeLists.txt  sdkconfig.defaults
temperature-sensor/: CMakeLists.txt  README.md
(+474 files in other folders)
